# universal-document-template-platform

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  INSTALLATION.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  supabase.py
backend/app/schemas/: ai_extraction.py  ai_extraction_metadata.py  audit.py  auth.py  common.py  company.py  document_model.py  file.py  parsed_document.py  pdf_metadata.py  preview.py  rendering.py  template.py  template_metadata.py
backend/app/services/: README.md  ai_extraction_service.py  audit_service.py  company_service.py  document_renderer.py  file_service.py  file_validation_service.py  parser_registry.py  parser_service.py  pdf_generation_service.py  preview_service.py  storage_service.py  template_engine_service.py
backend/app/tests/: parser_fixtures.py  test_ai_extraction_api.py  test_ai_extraction_cache.py  test_ai_extraction_candidates.py  test_ai_extraction_keys.py  test_ai_extraction_openai_client.py  test_ai_extraction_scoring.py  test_ai_extraction_service.py  test_auth.py  (+35 more)
backend/sql/: 001_company.sql  002_company_members.sql  003_rls.sql  004_audit_logs.sql  005_files.sql  006_storage_bucket.sql  007_files_upload_hardening.sql  008_parsed_documents.sql  009_ai_extractions.sql  010_templates.sql  011_generated_pdfs.sql
(+122 files in other folders)
